--- a/HW_2/Views/Home/Index.cshtml
+++ b/HW_2/Views/Home/Index.cshtml
@@ -2,73 +2,41 @@
     ViewBag.Title = "Home";
 }
 
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-</head>
+    <div id="wrapper-home">
+        @section sidebar {
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+                    <li class="active">
+                        <a href="@Url.Action("Index", "Home")"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>Home</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-users-cog fa-stack-1x "></i></span>System Setup</a>
+                        <ul class="nav-pills nav-stacked nav-indent" style="list-style-type:none;">
+                            <li>@Html.ActionLink("User Maintenacne", "Index", "UserMaintenance")</li>
+                            <li>@Html.ActionLink("Role Maintenacne", "Index", "RoleMaintenance")</li>
+                            <li>@Html.ActionLink("Menu Maintenacne", "Index", "MenuMaintenance")</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-wrench fa-stack-1x "></i></span>System Operation</a>
+                        <ul class="nav-pills nav-stacked nav-indent" style="list-style-type:none;">
+                            <li>@Html.ActionLink("Profile", "Index", "Profile")</li>
+                            <li>@Html.ActionLink("Change Password", "Index", "ChangePassword")</li>
+                            <li>@Html.ActionLink("Log out", "Index", "Logout")</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /#sidebar-wrapper -->
+        }
 
-<body>
-    <nav class="navbar navbar-default no-margin">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header fixed-brand">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="menu-toggle">
-                <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-            </button>
-            <a class="navbar-brand" href="#"><i class="fa fa-rocket fa-4"></i> M-33</a>
-        </div>
-        <!-- navbar-header-->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2">
-                        <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-                    </button>
-                </li>
-            </ul>
-        </div>
-        <!-- bs-example-navbar-collapse-1 -->
-    </nav>
-    <div id="wrapper">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
-                <li class="active">
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-dashboard fa-stack-1x "></i></span> Dashboard</a>
-                    <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                        <li><a href="#">link1</a></li>
-                        <li><a href="#">link2</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>Shortcut</a>
-                    <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                        <li><a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>link1</a></li>
-                        <li><a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-flag fa-stack-1x "></i></span>link2</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>Overview</a>
-                </li>
-                <li>
-                    <a href="#"> <span class="fa-stack fa-lg pull-left"><i class="fa fa-cart-plus fa-stack-1x "></i></span>Events</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-youtube-play fa-stack-1x "></i></span>About</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-wrench fa-stack-1x "></i></span>Services</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-server fa-stack-1x "></i></span>Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid xyz">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Admin Sidebar With Bootstrap by</h1>
+                        <h1>Home Page of C# Training Homework_02</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident laudantium nobis cum dignissimos ex inventore, velit blanditiis. Quod laborum soluta quidem culpa officia eligendi, quam, recusandae iste aliquid amet odit! </p>
                     </div>
                 </div>
@@ -76,9 +44,4 @@
         </div>
         <!-- /#page-content-wrapper -->
     </div>
-    <!-- /#wrapper -->
-    <!-- jQuery -->
-
-</body>
-
-</html>
+<!-- /#wrapper -->
