--- a/HW_2/Views/Login/Index.cshtml
+++ b/HW_2/Views/Login/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="wrapper-signin">
     <form class="form-signin">
         <h2 class="form-signin-heading">Homework_02</h2>
-        <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
-        <input type="password" class="form-control" name="password" placeholder="Password" required="" />
+        <input type="text" class="form-control" name="username" placeholder="Username" required autofocus />
+        <input type="password" class="form-control" name="password" placeholder="Password" required />
         <label class="checkbox">
             <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
         </label>
