1/15 Edit SystemSetup Page

--- a/HW_2/Views/Shared/_Layout.cshtml
+++ b/HW_2/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="container body-content">
+    <div class="container body-content content-left">
         @RenderSection("sidebar", false)
         @RenderBody()
     </div>
