--- a/HW_2/Content/common.scss
+++ b/HW_2/Content/common.scss
@@ -6,7 +6,6 @@ body {
     background-color: #fafafa;
 }
 
-.nav-light {
-    color: #fff;
-    font-size: 50px;
+.content-left {
+    margin-left: inherit;
 }
