--- a/HW_2/Content/home.css
+++ b/HW_2/Content/home.css
@@ -3,7 +3,7 @@
 }
 
 #wrapper-home {
-    padding-left: 0;
+    padding-left: 250px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -11,16 +11,11 @@
     overflow: hidden;
 }
 
-    #wrapper-home.toggled {
-        padding-left: 250px;
-        overflow: hidden;
-    }
-
 #sidebar-wrapper {
     z-index: 1000;
     position: absolute;
     left: 250px;
-    width: 0;
+    width: 250px;
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
@@ -29,10 +24,6 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
-
-#wrapper-home.toggled #sidebar-wrapper {
-    width: 250px;
 }
 
 #page-content-wrapper {
@@ -89,21 +80,6 @@
                 text-decoration: none;
             }
 
-    .sidebar-nav > .sidebar-brand {
-        height: 65px;
-        font-size: 18px;
-        line-height: 60px;
-    }
-
-        .sidebar-nav > .sidebar-brand a {
-            color: #999999;
-        }
-
-            .sidebar-nav > .sidebar-brand a:hover {
-                color: #fff;
-                background: none;
-            }
-
 .no-margin {
     margin: 0;
 }
@@ -114,32 +90,16 @@
 
 @media (min-width: 768px) {
     #wrapper-home {
-        padding-left: 250px;
+        /*padding-left: 250px;*/
     }
 
     .fixed-brand {
         width: 250px;
     }
 
-    #wrapper-home.toggled {
-        padding-left: 0;
-    }
-
     #sidebar-wrapper {
         width: 250px;
     }
-
-    #wrapper-home.toggled #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper-home.toggled-2 #sidebar-wrapper {
-        width: 50px;
-    }
-
-        #wrapper-home.toggled-2 #sidebar-wrapper:hover {
-            width: 250px;
-        }
 
     #page-content-wrapper {
         padding: 20px;
@@ -148,22 +108,5 @@
         -moz-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
-    }
-
-    #wrapper-home.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-        padding-left: 250px;
-    }
-
-    #wrapper-home.toggled-2 #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-        margin-left: -200px;
-        -webkit-transition: all 0.5s ease;
-        -moz-transition: all 0.5s ease;
-        -o-transition: all 0.5s ease;
-        transition: all 0.5s ease;
-        width: auto;
     }
 }
