--- a/HW_2/Views/Home/Index.cshtml
+++ b/HW_2/Views/Home/Index.cshtml
@@ -13,9 +13,9 @@
                     <li>
                         <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-users-cog fa-stack-1x "></i></span>System Setup</a>
                         <ul class="nav-pills nav-stacked nav-indent" style="list-style-type:none;">
-                            <li>@Html.ActionLink("User Maintenacne", "Index", "UserMaintenance")</li>
-                            <li>@Html.ActionLink("Role Maintenacne", "Index", "RoleMaintenance")</li>
-                            <li>@Html.ActionLink("Menu Maintenacne", "Index", "MenuMaintenance")</li>
+                            <li>@Html.ActionLink("User Maintenacne", "User", "SystemSetup")</li>
+                            <li>@Html.ActionLink("Role Maintenacne", "Role", "SystemSetup")</li>
+                            <li>@Html.ActionLink("Menu Maintenacne", "Menu", "SystemSetup")</li>
                         </ul>
                     </li>
                     <li>
